# Zentroid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Zentroid/: CMakeLists.txt  main.cpp
Zentroid/ZentroidCore/: CMakeLists.txt
Zentroid/ZentroidCore/include/: ZentroidCore.h  ZentroidCoreDef.h  adbprocess.h
Zentroid/ZentroidCore/src/adb/: adbprocessimpl.cpp
Zentroid/ZentroidCore/src/device/: compat.h  device.cpp  device.h
Zentroid/ZentroidCore/src/device/controller/: bufferutil.cpp  bufferutil.h  controller.cpp
Zentroid/ZentroidCore/src/device/controller/inputconvert/: controlmsg.cpp  controlmsg.h  inputconvertgame.cpp  inputconvertgame.h  inputconvertnormal.cpp
Zentroid/ZentroidCore/src/device/controller/inputconvert/keymap/: keymap.cpp  keymap.h
Zentroid/ZentroidCore/src/device/controller/receiver/: devicemsg.h
Zentroid/ZentroidCore/src/device/decoder/: decoder.cpp
Zentroid/ZentroidCore/src/device/demuxer/: demuxer.cpp
Zentroid/ZentroidCore/src/device/filehandler/: filehandler.h
Zentroid/ZentroidCore/src/device/recorder/: recorder.cpp
Zentroid/ZentroidCore/src/device/server/: server.cpp  server.h
Zentroid/ZentroidCore/src/devicemanage/: devicemanage.cpp  devicemanage.h
Zentroid/groupcontroller/: groupcontroller.h
Zentroid/render/: qyuvopenglwidget.cpp  qyuvopenglwidget.h
Zentroid/res/: Info_Mac.plist.in  Zentroid.rc
Zentroid/res/i18n/: CMakeLists.txt
Zentroid/ui/: advanceddialog.cpp  advanceddialog.h  cleanmodewidget.cpp  cleanmodewidget.h  customdialog.cpp  customdialog.h  dialog.cpp  dialog.h  dialog.ui  toggleswitch.cpp  toggleswitch.h  toolform.cpp  toolform.h  toolform.ui  videoform.cpp  videoform.h
Zentroid/ui/keymapeditor/: CMakeLists.txt  README.md  editorscene.h  keyassigndialog.cpp  keyassigndialog.h  keymapeditor.cpp  keymapeditor.h  keymapoverlay.cpp  keymapoverlay.h  keynode.cpp  keynode.h  layerpanel.cpp  layerpanel.h  propertiespanel.cpp  propertiespanel.h  undocommands.cpp  undocommands.h
Zentroid/uibase/: magneticwidget.cpp  magneticwidget.h
Zentroid/util/: config.cpp  config.h  keymappath.h
Zentroid/util/mousetap/: xmousetap.cpp
ci/: copy_if_missing.cmake  generate-version.py  lrelease.sh  lupdate.sh
ci/linux/: package_appimage.sh  publish_for_ubuntu.sh.todo
ci/mac/: build_for_mac.sh  package_for_mac.sh  publish_for_mac.sh
ci/mac/package/: dmg-settings.json  package.py
ci/win/: build_for_win.bat  publish_for_win.bat
config/: config.ini
docs/: KeyMapDes.md
keymap/: BGMI.json  FRAG.json  gameforpeace.json  test.json
